<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--    credential-->
    <string name="username" translatable="false">Username</string>
    <string name="password" translatable="false">Password</string>
    <string name="confirm_password" translatable="false">Confirm Password</string>
    <string name="login" translatable="false">Login</string>
    <string name="sign_up" translatable="false">Sign Up</string>
    <string name="name">Name</string>
    <string name="type_your_email">Type your Email</string>
    <string name="phone_number">Phone number</string>
    <string name="email_empty">Please enter vaild email id</string>
    <string name="email_none" />
    <string name="name_empty">Please enter valid name</string>
    <string name="name_none" />
    <string name="username_empty">Please enter valid username</string>
    <string name="username_none" />
    <string name="phone_empty">Please enter phone number</string>
    <string name="phone_none" />
    <string name="password_empty">Please enter a password greater 8 characters</string>
    <string name="password_match">Password does not match</string>
    <string name="password_none" />
    <string name="email">Email</string>
    <string name="login_unsuccessful">Please check your credentials</string>
    <string name="sign_up_successful">User added successful</string>
    <string name="sign_up_unsuccessful">Something went wrong.Please try again later.</string>
</resources>