<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.gratus.credentials.presentation.FragmentSignInViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/parent_sign_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="@dimen/width_100dp"
            android:layout_height="@dimen/height_100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:contentDescription="@string/free_now_strip_image"
            android:src="@drawable/logo_image" />

        <LinearLayout
            android:id="@+id/credential_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_logo"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_wrapper"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="?attr/black"
                app:errorEnabled="@{viewModel.credValidModel.emailChange}"
                app:errorText="@{viewModel.credValidModel.emailError}"
                app:hintAnimationEnabled="true"
                app:hintTextColor="?attr/secondary_text"
                app:startIconDrawable="@drawable/ic_email_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    style="@style/CredentialEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:text="@={viewModel.credValidModel.email}"
                    app:textChangedListener="@{viewModel.credValidModel.emailTextWatcher}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_wrapper"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="?attr/black"
                app:errorEnabled="@{viewModel.credValidModel.passwordChange}"
                app:errorText="@{viewModel.credValidModel.passwordError}"
                app:hintAnimationEnabled="true"
                app:hintTextColor="?attr/secondary_text"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_lock_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    style="@style/CredentialEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="@={viewModel.credValidModel.password}"
                    app:textChangedListener="@{viewModel.credValidModel.passwordTextWatcher}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_50dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:layout_marginRight="@dimen/margin_50dp"
                android:onClick="@{(v) -> viewModel.hitSignIn()}"
                android:padding="@dimen/padding_16dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold"
                app:backgroundTint="?attr/button_background" />
        </LinearLayout>

        <TextView
            android:id="@+id/sign_up_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/credential_layout"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/margin_50dp"
            android:padding="@dimen/padding_8dp"
            android:text="@string/sign_up"
            android:textColor="?attr/button_background"
            android:textSize="@dimen/text_size_regular"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

</layout>