<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.gratus.credentials.presentation.FragmentSignUpViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <RelativeLayout
            android:id="@+id/parent_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back_img"
                android:layout_width="@dimen/width_50dp"
                android:layout_height="@dimen/height_50dp"
                android:layout_marginBottom="@dimen/margin_50dp"
                android:contentDescription="@string/free_now_strip_image"
                android:padding="@dimen/padding_16dp"
                android:src="@drawable/ic_back_icon" />

            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="@dimen/width_100dp"
                android:layout_height="@dimen/height_100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_50dp"
                android:contentDescription="@string/free_now_strip_image"
                android:src="@drawable/logo_image" />

            <LinearLayout
                android:id="@+id/sign_up_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_logo"
                android:layout_marginLeft="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_50dp"
                android:layout_marginRight="@dimen/margin_16dp"
                android:background="@drawable/sign_up_layout_bg"
                android:orientation="vertical"
                android:paddingBottom="@dimen/padding_16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_wrapper"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_8dp"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:layout_marginRight="@dimen/margin_8dp"
                    app:boxStrokeColor="?attr/black"
                    app:errorEnabled="@{viewModel.credValidModel.nameChange}"
                    app:errorText="@{viewModel.credValidModel.nameError}"
                    app:hintTextColor="?attr/black"
                    app:startIconDrawable="@drawable/ic_user_icon">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name"
                        style="@style/CredentialEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/white"
                        android:ems="10"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:text="@={viewModel.credValidModel.name}"
                        android:textColor="?attr/primary_text"
                        app:textChangedListener="@{viewModel.credValidModel.nameTextWatcher}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_8dp"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:layout_marginRight="@dimen/margin_8dp"
                    app:boxStrokeColor="?attr/black"
                    app:errorEnabled="@{viewModel.credValidModel.emailChange}"
                    app:errorText="@{viewModel.credValidModel.emailError}"
                    app:hintTextColor="?attr/black"
                    app:startIconDrawable="@drawable/ic_email_icon">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        style="@style/CredentialEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/white"
                        android:hint="@string/type_your_email"
                        android:text="@={viewModel.credValidModel.email}"
                        android:textColor="?attr/primary_text"
                        app:textChangedListener="@{viewModel.credValidModel.emailTextWatcher}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phone_wrapper"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_8dp"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:layout_marginRight="@dimen/margin_8dp"
                    app:boxStrokeColor="?attr/black"
                    app:errorEnabled="@{viewModel.credValidModel.phoneChange}"
                    app:errorText="@{viewModel.credValidModel.phoneError}"
                    app:hintTextColor="?attr/black"
                    app:startIconDrawable="@drawable/ic_phone_icon">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone"
                        style="@style/CredentialEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/white"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:text="@={viewModel.credValidModel.phone}"
                        android:textColor="?attr/primary_text"
                        app:textChangedListener="@{viewModel.credValidModel.phoneTextWatcher}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_wrapper"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_8dp"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:layout_marginRight="@dimen/margin_8dp"
                    app:boxStrokeColor="?attr/black"
                    app:errorEnabled="@{viewModel.credValidModel.passwordChange}"
                    app:errorText="@{viewModel.credValidModel.passwordError}"
                    app:hintTextColor="?attr/black"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/ic_lock_icon">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        style="@style/CredentialEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/white"
                        android:hint="@string/password"
                        android:text="@={viewModel.credValidModel.password}"
                        android:textColor="?attr/primary_text"
                        app:textChangedListener="@{viewModel.credValidModel.passwordTextWatcher}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/retype_password_wrapper"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_8dp"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:layout_marginRight="@dimen/margin_8dp"
                    app:boxStrokeColor="?attr/black"
                    app:errorEnabled="@{viewModel.credValidModel.retypePasswordChange}"
                    app:errorText="@{viewModel.credValidModel.retypePasswordError}"
                    app:hintTextColor="?attr/black"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/ic_lock_icon">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/re_password"
                        style="@style/CredentialEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/white"
                        android:hint="@string/confirm_password"
                        android:text="@={viewModel.credValidModel.retypePassword}"
                        android:textColor="?attr/primary_text"
                        app:textChangedListener="@{viewModel.credValidModel.retypePasswordTextWatcher}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sign_up_bt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_50dp"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:layout_marginRight="@dimen/margin_50dp"
                    android:onClick="@{(v) -> viewModel.hitSignUp()}"
                    android:padding="@dimen/padding_16dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_title"
                    android:textStyle="bold"
                    app:backgroundTint="?attr/button_background" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</layout>